MAJ : back & front

--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,3 +1,25 @@
-<h1 class="center medium">Home</h1>
 
+<div class="holder" [ngClass]="{'active': clicked}"></div>
+
+<div class="parallax1"></div>
+
+<div (click)="goToGeneration()" class="message">
+    <div class="img-home-pokedex">
+      <img src="./assets/bulbizarre.png" alt="">
+      <img src="./assets/herbizarre.png" alt="">
+      <img src="./assets/florizarre.png" alt="">
+      <img src="./assets/salamèche.png" alt="">
+      <img src="./assets/reptincel.png" alt="">
+      <img src="./assets/dracaufeu.png" alt="">
+      <img src="./assets/carapuce.png" alt="">
+      <img src="./assets/carabaffe.png" alt="">
+      <img src="./assets/tortank.png" alt="">
+    </div>
+</div>
+
+<div class="parallax2"></div>
+
+<div class="message"></div>
+
+<div class="parallax3"></div>
 
