--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,9 +1,11 @@
 .position-liste{
-  margin-top: 6rem;
+}
+
+nav{
+  background-color: transparent;
 }
 
 .display-list{
-  background-color: #c7c7c7;
   display: flex;
   flex-direction: row;
   align-items: center;
