--- a/front/src/app/pokemon/list-generation/list-generation.component.css
+++ b/front/src/app/pokemon/list-generation/list-generation.component.css
@@ -23,4 +23,16 @@
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
 
+.holder{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: #313131;
+  opacity: 1;
+  z-index: 100;
+
+}
+
+
+
 
