--- a/front/src/app/pokemon/list-generation/list-generation.component.html
+++ b/front/src/app/pokemon/list-generation/list-generation.component.html
@@ -1,4 +1,5 @@
 <div class="container center">
+  <div class="holder"></div>
   <div class="row">
     <div *ngFor="let generation of generationList" class="col l6 m12 s12">
       <div (click)="goToFirstGeneration(generation)" class="card horizontal">
@@ -15,3 +16,4 @@
     </div>
   </div>
 </div>
+
