--- a/front/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/front/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container center">
   <div class="row">
     <app-filter-pokemons (filterChange)="changeFilter($event)"></app-filter-pokemons>
