--- a/front/src/app/home/home.component.css
+++ b/front/src/app/home/home.component.css
@@ -1,92 +1,153 @@
-html, body{
+
+.background-white{
+  position: absolute;
   width: 100%;
   height: 100%;
-  font-family: monospace, sans-serif;
 }
 
-.parallax1{
-  background: url("https://c.wallhere.com/photos/b1/ef/Pok_mon_forest-2096373.jpg!d") fixed;
-  background-size: cover;
+.background-list-generation{
+  position: absolute;
   width: 100%;
-  height: 600px;
+  height: 100%;
+  background: #424242  url("https://assets.pokemon.com/static2/_ui/img/chrome/body_bg.png");
 }
 
-.parallax2{
-  background: url("https://c.wallhere.com/photos/44/db/1500x900_px_pokemon-1707461.jpg!d") fixed;
-  background-size: cover;
+.background-list{
+  position: absolute;
+  overflow: hidden;
   width: 100%;
-  height: 600px;
-}
-
-.parallax3{
-  background: url("https://c.wallhere.com/photos/dc/7f/anime_digital_art_artwork_2D_portrait_Pok_mon-1660699.jpg!d") fixed;
-  background-size: cover;
-  width: 100%;
-  height: 1080px;
-}
-
-.message{
-  width: 100%;
-  color: white;
-  height: 550px;
-  background-color: #313131;
-  font-size: 2.5em;
-  text-align: center;
-  position: relative;
-  top: 50%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.message::before{
-  content: "";
-  position: absolute;
-  top: -50px;
-  left: 0;
-  width: 100%;
-  height: 150px;
-  background: linear-gradient(to bottom, transparent 0%, #313131 40%, transparent 60%);
+@keyframes haut-poke {
+  0% {
+    left: 50%;
+    top: 54%;
+    transform: translate(-50%, -50%)  rotate(25deg);
+  }
+  25% {
+    transform: translate(-50%, -50%)  rotate(-65deg);
+  }
+  100% {
+    left: 17.5%;
+  }
 }
 
-.message::after{
-  content: "";
+.haut-poke{
+  height: 275px;
+  width: 275px;
+  transform: translate(-50%, -50%) rotate(-65deg);
   position: absolute;
-  bottom: -50px;
-  left: 0;
-  width: 100%;
-  height: 150px;
-  background: linear-gradient(to top, transparent 0%, #313131 40%, transparent 60%);
+  z-index: 3;
+  animation: haut-poke 4s ease-in-out;
+  top: 54%;
+  left: 17.5%;
 }
 
-.message:hover{
+@keyframes bas-poke {
+  0% {
+    left: 50%;
+    top: 54%;
+    transform: translate(-50%, -50%)  rotate(25deg);
+  }
+  25% {
+    transform: translate(-50%, -50%)  rotate(-65deg);
+  }
+  100% {
+    left: 82%;
+  }
+}
+
+.bas-poke{
+  height: 275px;
+  width: 275px;
+  transform: translate(-50%, -50%) rotate(-66deg);
+  position: absolute;
+  animation: bas-poke 4s ease-in-out;
+  top: 54%;
+  left: 82%;
+}
+
+.slider-generation{
+  animation: slider-generation 5.8s ease-in-out;
+}
+
+@keyframes slider-generation {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+
+.material-icons{
+  color: grey;
+}
+
+.material-icons:hover{
+  color: black;
   cursor: pointer;
-}
-
-.img-home-pokedex{
-  display: flex;
-  flex-direction: row;
-  height: 300px;
-}
-
-.img-home-pokedex img{
-  margin-left: 20px;
 }
 
 .holder{
   position: fixed;
   width: 100vw;
   height: 100vh;
-  top: -100vh;
   background-color: #313131;
-  opacity: 0;
-  transition: opacity 1s ease-in-out ;
-  transition-duration: 1s;
+  opacity: 1;
   z-index: 100;
 }
 
-.holder.active{
-  opacity: 1;
-  top: 0;
+.container{
+  margin-top: 5rem;
 }
 
+.anime-background{
+  height: 100%;
+  width: 100%;
+  z-index: -10;
+  position: absolute;
+  background-color: #313131;
+  animation: anime-background 2s ease-in-out;
+  opacity: 0;
+}
+
+@keyframes anime-background {
+  0% {
+    opacity: 1;
+    z-index: 10000;
+  }
+  100% {
+    opacity: 0;
+    z-index: -10;
+  }
+}
+
+.current-page{
+  position: absolute;
+  width: 70%;
+  background-color: white;
+  left: 50%;
+  transform: translate(-50%);
+  height: 4rem;
+}
+
+.current-page p {
+  font-size : 1.2rem;
+  color: #adadad;
+  margin-left: 2rem;
+}
+
+.background-current-page{
+  width: 50%;
+  height: 4rem;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  background: white url("https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png") ;
+}
