--- a/front/src/app/pokemon/list-generation/list-generation.component.css
+++ b/front/src/app/pokemon/list-generation/list-generation.component.css
@@ -2,17 +2,12 @@
   max-height: 140px;
 }
 
+.container{
+  margin-top: 5rem;
+}
+
 .card-image{
   padding: 10px;
-}
-
-.material-icons{
-  color: grey;
-}
-
-.material-icons:hover{
-  color: black;
-  cursor: pointer;
 }
 
 .card{
@@ -23,16 +18,25 @@
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
 
-.holder{
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
+.anime-background{
+  height: 100%;
+  width: 100%;
+  z-index: -10;
+  position: absolute;
   background-color: #313131;
-  opacity: 1;
-  z-index: 100;
-
+  animation: anime-background 2s ease-in-out;
+  opacity: 0;
 }
 
-
+@keyframes anime-background {
+  0% {
+    opacity: 1;
+    z-index: 10000;
+  }
+  100% {
+    opacity: 0;
+    z-index: -10;
+  }
+}
 
 
