--- a/front/src/app/pokemon/navbar/navbar.component.html
+++ b/front/src/app/pokemon/navbar/navbar.component.html
@@ -1,21 +1,28 @@
-
 <div class="holder" [ngClass]="{'active': clicked}"></div>
 
 <nav class="navbar">
   <div class="nav-wrapper">
     <ul id="liContainer">
       <li (click)="goToHome()" class="liElement li-home nav-wrapper">
-          <span class="span-title">Home</span>
+        <span class="span-title">Home</span>
       </li>
       <li (click)="goToPokedex()" class="liElement li-pokedex nav-wrapper">
-          <span class="span-title">Pokédex</span>
+        <span class="span-title">Pokédex</span>
       </li>
       <li class="liElement li-play nav-wrapper">
-          <span class="span-title">Jouer</span>
+        <span class="span-title">Jouer</span>
       </li>
       <li (click)="goToInfos()" class="liElement li-infos nav-wrapper">
         <span class="span-title">Infos</span>
       </li>
+      <ul class="dropdown-account">
+        <li class="liElement li-account nav-wrapper"><span class="span-title" >Account</span>
+          <ul>
+            <li (click)="goToLogin()"><a>Login</a></li>
+            <li (click)="goToRegister()"><a>Register</a></li>
+          </ul>
+        </li>
+      </ul>
     </ul>
   </div>
 </nav>
