--- a/front/src/app/pokemon/navbar/navbar.component.css
+++ b/front/src/app/pokemon/navbar/navbar.component.css
@@ -81,11 +81,11 @@
 }
 
 .li-play::after{
-  background-color: #E6BC2F;
+  background-color: #30A7D7;
 }
 
 .li-play:hover{
-  background-color: #E6BC2F;
+  background-color: #30A7D7;
   color: white;
   cursor: pointer;
 }
@@ -165,6 +165,7 @@
   position: absolute;
   transition: all 0.5s ease;
   display: none;
+  width: 100%;
 }
 
 .dropdown-account  li:hover > ul,
@@ -174,6 +175,8 @@
   display: block;
   z-index: 10000000;
   background-color: #606060;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .dropdown-account li ul li {
@@ -202,6 +205,17 @@
   cursor: pointer;
 }
 
+.span-icon-account{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.span-icon-account i{
+  font-size: 2.2rem;
+}
 
 
 
