MAJ Front + back finished

--- a/front/src/app/pokemon/list-pokemon/list-pokemon.component.css
+++ b/front/src/app/pokemon/list-pokemon/list-pokemon.component.css
@@ -27,3 +27,8 @@ textarea.materialize-textarea:focus:not([readonly]) {
 .container{
   margin-top: 5rem;
 }
+
+.img-pokemon{
+  object-position: center;
+  object-fit: contain;
+}
