--- a/front/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/front/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -5,14 +5,13 @@
     <app-filter-pokemons (filterChange)="changeFilter($event)"></app-filter-pokemons>
     <div style="margin-top: 2rem" *ngFor="let pokemon of filterList" class="col l6 m12 s12">
       <div (click)="goDetails(pokemon)" class="card horizontal" [pokemonBorderCard]="pokemon.types[0] | pokemonTypeColorBorderHover">
-        <div class="card-image">
-          <img [src]="pokemon.picture" alt="pokemon.name">
-        </div>
+          <img class="img-pokemon" [src]="pokemon.avatars" alt="pokemon.name">
         <div class="card-stacked">
           <div class="card-content">
-            <p>{{pokemon.race}}</p>
+            <p>{{pokemon.name}}</p>
             <p><small>{{ pokemon.created | date:"dd/MM/yyyy" | uppercase }}</small></p>
             <p style="margin-bottom: 10px"><small>hp : {{ pokemon.hp }}</small></p>
+            <p style="margin-bottom: 10px"><small>attack : {{ pokemon.attack }}</small></p>
             <span *ngFor="let type of pokemon.types" class="{{ type | pokemonTypeColor }}">
               {{ type }}
             </span>
