--- a/front/src/app/pokemon/navbar/navbar.component.html
+++ b/front/src/app/pokemon/navbar/navbar.component.html
@@ -6,6 +6,9 @@
       <li (click)="goToHome()" class="liElement li-home nav-wrapper">
         <span class="span-title">Home</span>
       </li>
+      <li (click)="initDB()" class="liElement li-pokedex nav-wrapper">
+        <span class="span-title">Reinit DB</span>
+      </li>
       <li (click)="goToPokedex()" class="liElement li-pokedex nav-wrapper">
         <span class="span-title">Pokédex</span>
       </li>
