--- a/front/src/app/pokemon/edit-pokemon/edit-pokemon.component.html
+++ b/front/src/app/pokemon/edit-pokemon/edit-pokemon.component.html
@@ -1,5 +1,5 @@
-<h2 class="center">Modifier {{pokemon?.race}}</h2>
+<h2 class="center">Modifier {{pokemon?.name}}</h2>
 <p class="center">
-  <img [src]="pokemon?.picture" alt="">
+  <img [src]="pokemon?.avatars" alt="">
 </p>
 <app-pokemon-edit-form *ngIf="pokemon" [pokemon]="pokemon"></app-pokemon-edit-form>
