--- a/front/src/app/pokemon/list-generation/list-generation.component.html
+++ b/front/src/app/pokemon/list-generation/list-generation.component.html
@@ -1,4 +1,3 @@
-
 <div class="anime-background"></div>
 
 <app-navbar></app-navbar>
@@ -6,7 +5,7 @@
 <div class="container center">
   <div class="row">
     <div *ngFor="let generation of generationList" class="col l6 m12 s12">
-      <div (click)="goToFirstGeneration()" class="card horizontal">
+      <div (click)="goToTheCurrentGeneration(generation.id)" class="card horizontal">
         <div class="card-image">
           <img class="img-size" src="{{generation.picture}}" alt="generation.picture">
         </div>
